# http-ext

./: Cargo.toml
http-authentication/: Cargo.toml  README.md
http-authentication/src/: authorization_header.rs  challenge.rs  challenges.rs  credentials.rs  header_utils.rs  impl_http.rs  lib.rs
http-authentication/src/schemes/: basic.rs  bearer.rs  mod.rs
http-authentication/src/schemes/basic/: challenge.rs  credentials.rs  mod.rs
http-authentication/src/schemes/bearer/: challenge.rs  credentials.rs  mod.rs
http-handler-data/: Cargo.toml  README.md
http-handler-data/src/: handler_data.rs  lib.rs
http-path-params/: Cargo.toml  README.md
http-path-params/src/: id.rs  lib.rs  path_param.rs  path_params_info.rs  username.rs
http-path-params/src/path_params/: impl_id.rs  impl_internal.rs  impl_path_param.rs  impl_username.rs  mod.rs
http-request-body/: Cargo.toml  README.md
http-request-body/src/: error.rs  lib.rs  utils.rs
http-request-uri/: Cargo.toml  README.md
http-request-uri/src/: impl_http.rs  lib.rs
