[package]
name = "http-handler-data"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP Handler Data"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-rs"
homepage = "https://github.com/bk-rs/http-rs"
documentation = "https://docs.rs/http-handler-data"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["std"]
std = ["cloneable-any/std"]

[dependencies]
cloneable-any = { version = "0.1", default-features = false }
