[package]
name = "http-path-params"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP Path Params"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-rs"
homepage = "https://github.com/bk-rs/http-rs"
documentation = "https://docs.rs/http-path-params"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["std"]
std = ["downcast-rs/std"]

[dependencies]
dyn-clone = { version = "1", default-features = false }
downcast-rs = { version = "1", default-features = false }
