[package]
name = "http-request-uri"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HTTP Request-URI"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http-ext"
homepage = "https://github.com/bk-rs/http-ext"
documentation = "https://docs.rs/http-request-uri"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "http" ]

[dependencies]
http = { version = "0.2", default-features = false, optional = true }

[package.metadata.cargo-all-features]
